--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 35px;
     font-weight: bold;
-    text-align: center;
+    text-align: justify;
 }
 
 img {
@@ -36,7 +36,7 @@ li {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
     font-weight: bold;
-    text-align: center;
+    text-align: justify;
 }
 
 p {
